<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flanelinha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Sobre</string>
    <string name="title_activity_checkin">Realizar Check-in</string>
    <string name="note_not_expanded">
        <![CDATA[

            <i><b>NOTA:</b> Segure no mapa para expandi-lo.</i>
         ]]>
    </string>
    <string name="note_expanded">
        <![CDATA[

            <i><b>NOTA:</b> Segure no mapa para reduzi-lo.</i>
         ]]>
    </string>
    <string name="finish_checkin">FINALIZAR CHECK-IN</string>
    <string name="local_name">Nome do local:</string>
    <string name="details_local">Detalhes do local:</string>
    <string name="optional_field">(Campo opcional)</string>
    <string name="optional_field_plus">(Campo opcional)\nEx: Em frente à padaria</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_find_car">Criar rota</string>
    <string name="title_activity_details_map">Detalhes</string>
    <string name="add_widget">Add widget</string>
    <string name="quick_checkin">Check-in rápido!</string>
    <string name="open_source">Open source</string>
    <string name="open_in_github">Abrir no github</string>
    <string name="application_version">Versão do aplicativo</string>
    <string name="warning_checkin">Você possui um check-in realizado anteriormente.\n\nDeseja excluí-lo e realizar um novo?</string>
    <string name="warning">Aviso</string>
    <string name="title_activity_credit">Contato</string>
    <string name="credit_details">Sobre o autor</string>
    <string name="close">Fechar</string>
    <string name="title_activity_about_application">Sobre</string>
    <string name="design_and_code"><![CDATA[Design & Código]]></string>
    <string name="jgabrielfreitas">JGabrielFreitas</string>
    <string name="github">GitHub</string>
    <string name="data_base">Banco de dados</string>
    <string name="cristian_danner">Cristian Danner</string>
    <string name="router_lib">Google Directions Android</string>
    <string name="google_lib_router_creator">jd-alexander</string>
    <string name="getting_your_location_please_wait">Buscando a sua localização.\nPor favor, aguarde..</string>
    <string name="cant_get_location">Não foi possível pegar a sua localização</string>
    <string name="getting_your_location">Carregando..</string>
    <string name="title_activity_location_not_found">Sem localização</string>
    <string name="location_not_found">Não foi possível obter\na sua localização. Verifique sua internet e tente novamente!</string>
    <string name="creating_route">Criando rota..</string>
    <string name="register_error">Erro na leitura do Cadastro</string>
    <string name="your_car_is_in">Seu carro está em:</string>
    <string name="share_app">Conheça o aplicativo "Flanelinha - Onde Parei?" \n https://goo.gl/Y9UjsF</string>
    <string name="share_using">Compartilhar usando..</string>
    <string name="do_you_like_this_app">Compartilhar</string>
    <string name="share_to_your_friends">Compartilhe com seus amigos :)</string>
    <string name="joao_gabriel_freitas">João Gabriel de Freitas</string>
    <string name="my_twitter_name">\@JGabrielFreitas</string>
    <string name="my_email">jgabrielafreitas@gmail.com</string>
    <string name="my_name">João Gabriel de Andrade Freitas</string>
    <string name="developer">Desenvolvedor</string>
    <string name="email">Email</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google+</string>
    <string name="linkedin">Linkedin</string>
    <string name="share_with">Enviar com...</string>
    <string name="flanelinha_where_did_i_part">Flanelinha - Onde Parei?</string>


</resources>
