<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/topStreetView" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:alpha="0.3"
        android:background="@drawable/gradient"
        android:layout_above="@+id/topStreetView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout" />

    <View
        android:id="@+id/topStreetView"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="#fff"
        android:layout_above="@+id/streetTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_below="@+id/topStreetView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/view2" />

    <TextView
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Rua"
        android:id="@+id/streetTextView"
        android:textColor="@color/stone_text_primary"
        android:layout_above="@+id/stateTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:paddingBottom="@dimen/default_margin_between_views"
        android:textColor="@color/text_secundary"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="complemento"
        android:id="@+id/stateTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_marginRight="@dimen/half_default_margin_between_views"
        fab:fab_addButtonColorNormal="@color/dark_violet"
        fab:fab_addButtonColorPressed="@color/dark_blue_2"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:background="@drawable/map_button"
            android:id="@+id/fab_menu_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_addButtonSize="mini"
            fab:fab_title="@string/title_activity_checkin" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:background="@drawable/map_button"
            android:id="@+id/fab_menu_find_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_addButtonSize="mini"
            fab:fab_title="@string/title_activity_find_car" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:background="@drawable/map_button"
            android:id="@+id/fab_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_addButtonSize="mini"
            fab:fab_title="@string/title_activity_about_application" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>


